IstioD/templates/00-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-istiod

  annotations:
    argocd.argoproj.io/hook: PreSync
