IstioD/templates/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: external-istiod-dr
  namespace: external-istiod

spec:
  host: istiod.external-istiod.svc.cluster.local

  trafficPolicy:
    portLevelSettings:
      - port:
          number: 15012
        tls:
          mode: SIMPLE
        connectionPool:
          http:
            h2UpgradePolicy: UPGRADE

      - port:
          number: 443
        tls:
          mode: SIMPLE
